--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,8 +15,8 @@ COPY scripts/install_requirements.sh /app/scripts/
 # Make install script executable
 RUN chmod +x /app/scripts/install_requirements.sh
 
-# Install Python dependencies with retry logic
-RUN /app/scripts/install_requirements.sh requirements/prod.txt
+# Install Python dependencies (dev requirements include base)
+RUN /app/scripts/install_requirements.sh requirements/dev.txt
 
 # Copy the rest of the application
 COPY . /app
@@ -27,7 +27,8 @@ RUN chmod +x scripts/*.sh scripts/*.py 2>/dev/null || true
 # Create directories for static, media, and logs files
 RUN mkdir -p /app/staticfiles /app/media /app/logs
 
-# Collect static files
-RUN python manage.py collectstatic --noinput || true
+# Don't collect static files in dev (will be handled by runserver if needed)
+# RUN python manage.py collectstatic --noinput || true
 
-CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
