--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
-DEBUG=True
-PIPELINE=local
+DEBUG=False
+PIPELINE=production
 SECRET_KEY=WKX0:Zh68/5*0I9wYbS%Nl7r[i<lrI(g~>[4_)xrCe8GbzaZZ
-DATABASE_URL=postgres://zemen:password@localhost:5432/zemenayalytics
-POSTGRES_DB=zemenayalytics
-POSTGRES_USER=zemen
+
+
+# Database specific
+DB_NAME=zemenayalyticstest
+DB_USER=zemen
 POSTGRES_PASSWORD=zemen@2024
+DB_HOST=localhost
+DB_PORT=5432
+
+# non docker postgres password
+DB_PASSWORD=zemen@2024
+
 
 #super user configurations
 DJANGO_SUPERUSER_USERNAME=admin
